--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,31 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+@layer components { 
+  .homepage { 
+    @apply bg-[#EEF0F2] h-full w-full md:pb-[200px] pb-[100px] pt-3 px-6
+  }
+  .home-container{
+    @apply  border-blue-500 w-full h-full flex items-start justify-start pt-24
+  }
+  .hometext-container{
+    @apply  w-full py-3 px-4 
+  }
+  .smooth { 
+    @apply transition ease-in-out duration-200
+  }
+  .menu-item-container{
+    @apply font-Marc text-lg  px-6 py-3 cursor-pointer rounded-full
+     smooth hover:bg-[#0D21A1] hover:text-[#EEC643]
+  }
 }
