--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Marcellus&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Forum&family=Inconsolata:wght@300&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -10,10 +11,13 @@ body {
   height: 100vh;
   overflow-y: scroll;
 }
+::-webkit-scrollbar { 
+  display: none;
+}
 
 @layer components { 
   .homepage { 
-    @apply bg-[#EEF0F2] h-full w-full md:pb-[200px] pb-[100px] pt-3 px-6
+    @apply bg-[#EEF0F2] h-full w-full md:pb-[200px] pb-[100px] pt-24 px-6
   }
   .home-container{
     @apply  border-blue-500 w-full h-full flex items-start justify-start pt-24
@@ -26,8 +30,18 @@ body {
   }
   .menu-item-container{
     @apply font-Marc text-lg  px-6 py-3 cursor-pointer rounded-full
-     smooth hover:bg-[#0D21A1] hover:text-[#EEC643]
+     smooth hover:bg-[#0D21A1] hover:text-[#EEC643] shadow-xl shadow-gray-400/10
+      hover:shadow-blue-800/50 transition ease-in-out duration-500
   }
+  .getintouch-circle-footer {
+     @apply z-40 cursor-pointer rounded-full w-[170px] bg-[#0D21A1] px-10 py-12 -mt-24 mx-24
+     hover:bg-[#0D21A1]/70 smooth hover:scale-75 duration-500
+ }
+ .btn-footer  { 
+   @apply py-4 px-6 bg-[#EEF0F2] rounded-full font-Solata font-bold text-2xl cursor-pointer z-40
+   hover:scale-110 smooth hover:bg-[#0D21A1]
+ }
+
   .page-wrapper {
 
   
@@ -90,5 +104,34 @@ body {
       }
     }
   }
+  
+
+
+
+
+
+
+
   }
+
+///////////////////////////////////// slider ///////////////////////////////////////////////
+
+
+.slider { 
+  @apply  w-[500px] h-[500px] flex space-x-6 max-w-[200vw] rounded-xl
 }
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
