--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,18 +9,131 @@
 
 
 
+
+
 body {
-  height: 100vh;
-  width:100vw;
-  overflow-y: scroll;
-  margin:0;
+  margin: 0;
+  --color-text: #111;
+  --color-number: #999;
+  --color-bg: #fff;
+  --color-link: #1352d1;
+  --color-link-hover: #111;
+  color: var(--color-text);
+  background-color: var(--color-bg);
+  font-family: europa, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-::-webkit-scrollbar { 
-  display: none;
+
+
+// logo //
+
+a {
+  text-decoration: none;
+  color: var(--color-link);
+  outline: none;
 }
+
+a:hover {
+  color: var(--color-link-hover);
+  outline: none;
+}
+
+a:focus {
+  outline: none;
+  background: lightgrey;
+}
+
+a:focus:not(:focus-visible) {
+  background: transparent;
+}
+
+a:focus-visible {
+  outline: 2px solid red;
+  background: transparent;
+}
+
+
+.content-item {
+
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  position: relative;
+}
+
+.content-item::before {
+  color: var(--color-number);
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.link {
+  cursor: pointer;
+  font-size: 18px;
+  position: relative;
+  white-space: nowrap;
+  color: var(--color-text);
+}
+
+.link::before,
+.link::after {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background: currentColor;
+  top: 100%;
+  left: 0;
+  pointer-events: none;
+}
+
+.link::before {
+  content: '';
+  /* show by default */
+}
+
+.link-leda {
+  overflow: hidden;
+}
+
+.link-leda:hover::before {
+  transform-origin: 0% 50%;
+  transform: scale3d(1, 1, 1);
+}
+
+.link-leda::after {
+  content: attr(data-text);
+  height: 100%;
+  top: 0;
+  background: none;
+  transform-origin: 100% 50%;
+  transform: translate3d(150%, 0, 0);
+  transition: transform 0.3s cubic-bezier(0.5, 0.5, 0.3, 1);
+}
+
+.link-leda:hover::after {
+  transform: translate3d(0, 0, 0);
+}
+
+.link-leda span {
+    display: inline-block;
+    transition: transform 0.3s cubic-bezier(0.5, 0.5, 0.3, 1);
+  
+}
+
+.link-leda:hover span {
+    transform: translate3d(-150%, 0, 0);
+}
+
+// logo //
 
 @layer components { 
-
   .homepage { 
     @apply bg-[#EEF0F2] h-full w-full md:pb-[200px] pb-[100px] pt-24 px-6
   }
@@ -43,8 +156,7 @@ body {
      hover:bg-[#0D21A1]/70 smooth hover:scale-75 duration-500
  }
   .page-wrapper {
-
-  
+    
   .project-list {
 
     &:hover {
@@ -78,10 +190,7 @@ body {
         align-items:center;
       }
     }
-     
-  
   }
-
   .project-media {
     position: fixed;
     top: 0;
@@ -114,14 +223,11 @@ body {
 
   }
 
-///////////////////////////////////// slider ///////////////////////////////////////////////
 
 
-.slider { 
-  @apply  w-[500px] h-[500px] flex space-x-6 max-w-[200vw] rounded-xl
-}
 
-// Magnetic ////////////////////////////@at-root
+
+// Magnetic
 .magnetic-button {
   border: transparent;
   padding: 0;
