--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,55 +7,353 @@
 @tailwind components;
 @tailwind utilities;
 
+  @font-face {
+    font-family: "Moret";
+    src: url("../utils/Fonts/Moret.ttf");
+  }
+
 
 
 
 
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
+  overflow: hidden;
   --color-text: #111;
   --color-number: #999;
   --color-bg: #fff;
   --color-link: #1352d1;
   --color-link-hover: #111;
-  color: var(--color-text);
-  background-color: var(--color-bg);
-  font-family: europa, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
+// slider // 
+.content {
+  padding: 3rem;
+  min-height: 90vh;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-between;
+}
+
+.content--auto {
+  min-height: 0;
+}
+
+.content--feature {
+  justify-content: flex-start;
+  min-height: 0;
+}
+
+.content--fixed {
+  position: fixed;
+  z-index: 1000;
+  width: 100%;
+  top: 0;
+}
+
+.content__pretitle {
+  margin-top: auto;
+  font-size: 1.85rem;
+  color: var(--color-alt);
+}
+
+.content__pretitle::before {
+  content: "\2015";
+  margin-right: 0.25rem;
+}
+
+.content__title {
+  font-size: 9vw;
+  line-height: 0.8;
+  margin: 0 0 3rem 0;
+  font-weight: 400;
+  max-width: 800px;
+  will-change: transform;
+}
+
+.content__text {
+  font-size: 2.25rem;
+  font-size: clamp(1rem, 4vw, 2.25rem);
+}
+
+.content__text--right {
+  align-self: flex-end;
+}
+
+.content__text--centered {
+  margin: auto;
+}
+
+.content__breakout {
+  margin: 0 -3rem;
+  white-space: nowrap;
+  text-transform: uppercase;
+  font-weight: 200;
+  font-style: italic;
+  color: #211f1b;
+}
+
+.content__breakout--big {
+  font-size: 13vw;
+  font-weight: 200;
+}
+
+.content__breakout--medium {
+  font-size: 5vw;
+}
+
+.tiles {
+  --tiles-height: 52vw;
+  height: var(--tiles-height);
+  position: relative;
+  overflow: hidden;
+
+  @apply font-Marc tracking-widest text-[#EEC643]
+}
+.button-1 {
+  padding: 20px 30px;
+}
+
+.tiles--columns-rotated {
+  --tiles-height: 180vmax;
+}
+
+.tiles--columns {
+  --tiles-height: 140vh;
+}
+
+.tiles--oneline {
+  --tiles-height: 50vh;
+  min-height: 400px;
+  margin: 10vh 0;
+}
+
+.tiles--small {
+  --tiles-height: 100px;
+  margin: 10vh 0 0;
+}
+
+.tiles--fixed {
+  --tiles-height: 65vw;
+  margin-top: 25vh;
+}
+
+.tiles--perspective {
+  overflow: visible;
+  perspective: 1000px;
+  --tiles-height: 500px;
+}
+
+.tiles__wrap {
+  width: 150%;
+  --tileswrap-height: var(--tiles-height);
+  height: var(--tileswrap-height);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate3d(-50%, -50%, 0);
+}
+
+.tiles--rotated .tiles__wrap {
+  --tileswrap-height: calc(var(--tiles-height) * 1.8);
+  transform: translate3d(-50%, -50%, 0) rotate(22.5deg);
+}
+
+.tiles--columns-rotated .tiles__wrap {
+  width: 150%;
+  display: flex;
+  transform: translate3d(-50%, -50%, 0) rotate(-22.5deg);
+  left: 50%;
+  top: 50%;
+  align-items: center;
+  justify-content: center;
+}
+
+.tiles--columns .tiles__wrap {
+  width: 100%;
+  display: flex;
+  --tileswrap-height: calc(var(--tiles-height) * 1.4);
+  transform: translate3d(0, -50%, 0);
+  left: 0;
+  top: 50%;
+}
+
+.tiles--perspective .tiles__wrap {
+  width: 200%;
+  transform: translate3d(-50%, -50%, 0) translateX(-25%) translateZ(-1200px) rotateX(75.5deg) rotateZ(12deg);
+}
+
+.tiles--fixed .tiles__wrap {
+  width: 100%;
+}
+
+.tiles__line {
+  display: flex;
+}
+
+.tiles--columns .tiles__line {
+  width: 25%;
+  padding: 0 1rem;
+  display: block;
+}
+
+.tiles--columns-rotated .tiles__line {
+  width: 320px;
+  flex: none;
+  padding: 0 1.5vw;
+  display: block;
+}
+
+.tiles--columns-rotated .tiles__line:nth-child(even) {
+  margin-top: -160px;
+}
+
+.tiles--oneline .tiles__line {
+  height: 100%;
+}
+
+.tiles--small .tiles__line {
+  height: 100%;
+}
+
+.tiles__line-img {
+  --tile-margin: 2vw;
+  flex: none;
+  width: calc(16.6666% - var(--tile-margin) * 2);
+  height: calc(var(--tileswrap-height) / 3 - (3 * var(--tile-margin) / 2));
+  margin: var(--tile-margin);
+  background-size: cover;
+  background-position: 50% 50%;
+
+  @apply object-cover object-center
+}
+
+.tiles--perspective .tiles__line-img {
+  backface-visibility: hidden;
+  outline: 1px solid transparent;
+  --tile-margin: 1vw;
+  width: calc(16.6666% - var(--tile-margin) * 2);
+  height: calc(16.666vw * 1.3);
+}
+
+.tiles--oneline .tiles__line-img {
+  --tile-margin: 1vw;
+  margin: 0 var(--tile-margin);
+  width: calc(25% - var(--tile-margin) * 2);
+  height: 100%;
+}
+
+.tiles--small .tiles__line-img {
+  --tile-margin: 5px;
+  margin: 0 var(--tile-margin);
+  width: calc(12.5% - var(--tile-margin) * 2);
+  height: 100%;
+}
+
+.tiles--rotated .tiles__line-img {
+  --tile-margin: 1vw;
+  width: calc(16.6666% - var(--tile-margin) * 2);
+  height: calc(var(--tileswrap-height) / 5 - (4 * var(--tile-margin) / 2));
+}
+
+.tiles--columns-rotated .tiles__line-img {
+  --tile-margin: 3vw 0;
+  width: 100%;
+  height: 400px;
+}
+
+.tiles--columns .tiles__line-img {
+  --tile-margin: 2rem 0;
+  width: 100%;
+  height: calc(25vw * 1.3);
+}
+
+.tiles--fixed .tiles__line-img {
+  --tile-margin: 10px;
+  -webkit-filter: brightness(0.8);
+  width: calc(16.6666% - var(--tile-margin) * 2);
+  height: calc(var(--tileswrap-height) / 3 - (3 * var(--tile-margin) / 2));
+}
+
+.tiles--darker .tiles__line-img {
+  opacity: 0.7;
+}
+
+.tiles__title {
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10vw;
+  padding: 3rem;
+  margin: 0;
+  line-height: 0.8;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.tiles__title--alt {
+  font-size: 9vw;
+  font-size: clamp(2rem, 9vw, 7.25rem);
+}
+
+.tiles__title--intro {
+  padding-top: 10vh;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.tiles__title--right {
+  justify-content: flex-end;
+}
+
+.tiles__title--left {
+  justify-content: flex-start;
+}
+
+.tiles__title--full {
+  height: 100%;
+}
+
+.backtop {
+  align-self: center;
+  margin: auto 0;
+  font-size: 6vw;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.backtop::after {
+  content: "\2934";
+  font-size: 3vw;
+  vertical-align: top;
+  margin-left: 1rem;
+}
+
+
+
+
+
+
+
+
+
+//# slider #//
+
 
 // logo //
 
-a {
-  text-decoration: none;
-  color: var(--color-link);
-  outline: none;
-}
-
-a:hover {
-  color: var(--color-link-hover);
-  outline: none;
-}
-
-a:focus {
-  outline: none;
-  background: lightgrey;
-}
-
-a:focus:not(:focus-visible) {
-  background: transparent;
-}
-
-a:focus-visible {
-  outline: 2px solid red;
-  background: transparent;
-}
 
 
 .content-item {
-
   width: 100%;
   height: 100%;
   margin: 0;
@@ -80,6 +378,7 @@ a:focus-visible {
   position: relative;
   white-space: nowrap;
   color: var(--color-text);
+  @apply hover:text-[#0D21A1] smooth duration-300
 }
 
 .link::before,
@@ -138,7 +437,7 @@ a:focus-visible {
     @apply bg-[#EEF0F2] h-full w-full md:pb-[200px] pb-[100px] pt-24 px-6
   }
   .home-container{
-    @apply  border-blue-500 w-full h-full flex items-start justify-start pt-24
+    @apply   w-full h-full flex items-start justify-start pt-24
   }
   .hometext-container{
     @apply  w-full py-3 px-4 
@@ -155,77 +454,7 @@ a:focus-visible {
      @apply z-40 cursor-pointer rounded-full w-[170px] bg-[#0D21A1] px-10 py-12 -mt-24 mx-24
      hover:bg-[#0D21A1]/70 smooth hover:scale-75 duration-500
  }
-  .page-wrapper {
-    
-  .project-list {
-
-    &:hover {
-      .project-title {
-        opacity: 0.1;
-      }
   
-    }
-  
-    .project-item {
-
-      &:hover {
-        cursor: pointer;
-  
-        .project-title {
-          opacity: 1;
-        }
-      }
-  
-      &:last-of-type {
-        margin-right: 0px;
-  
-        .project-title:after {
-          content: "";
-        }
-      }
-  
-      .project-title {
-        transition: opacity .35s cubic-bezier(.77, 0, 0.175, 1);
-        z-index: 2;
-        align-items:center;
-      }
-    }
-  }
-  .project-media {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-
-    img {
-      opacity: 0;
-      position: absolute;
-      width: auto;
-      height: auto;
-      max-width: 60%;
-      max-height: 50%;
-      object-fit: contain;
-      pointer-events: none;
-      &.is-active {
-        opacity: 1;
-      }
-    }
-  }
-  
-
-
-
-
-
-
-
-  }
-
-
-
-
 
 // Magnetic
 .magnetic-button {
