--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -361,7 +361,6 @@ body {
 }
 
 .content-item::before {
-  color: var(--color-number);
   position: absolute;
   top: 0;
   left: 0;
@@ -369,10 +368,8 @@ body {
 
 .link {
   cursor: pointer;
-  font-size: 18px;
   position: relative;
   white-space: nowrap;
-  color: var(--color-text);
   @apply hover:text-[#0D21A1] smooth duration-300
 }
 
@@ -380,11 +377,8 @@ body {
 .link::after {
   position: absolute;
   width: 100%;
-  height: 1px;
-  background: currentColor;
   top: 100%;
   left: 0;
-  pointer-events: none;
 }
 
 .link::before {
@@ -408,7 +402,7 @@ body {
   background: none;
   transform-origin: 100% 50%;
   transform: translate3d(150%, 0, 0);
-  transition: transform 0.3s cubic-bezier(0.5, 0.5, 0.3, 1);
+  transition: transform 0.6s cubic-bezier(0.85,0,0.15,1);
 }
 
 .link-leda:hover::after {
@@ -417,7 +411,7 @@ body {
 
 .link-leda span {
     display: inline-block;
-    transition: transform 0.3s cubic-bezier(0.5, 0.5, 0.3, 1);
+    transition: transform 0.6s cubic-bezier(0.85, 0, 0.15, 1);
   
 }
 
@@ -435,17 +429,17 @@ body {
     @apply   w-full h-full flex items-start justify-start pt-36 mt-24
   }
   .hometext-container{
-    @apply  w-full py-3 px-4 
+    @apply  w-full py-3 px-6 lg:px-24
   }
   .smooth { 
     @apply transition ease-in-out duration-200
   }
   .menu-item-container{
-    @apply font-Marc cursor-pointer
+    @apply font-Solata font-bold cursor-pointer
      smooth duration-300 hover:scale-125
   }
   .nav-lnk { 
-    @apply hover:text-[#0D21A1] text-xl font-medium text-[#011638]
+    @apply hover:text-[#0D21A1] text-xl font-bold text-[#011638]
   }
   .getintouch-circle-footer {
      @apply z-40 cursor-pointer rounded-full w-[170px] bg-[#0D21A1] px-10 py-12 -mt-24 mx-24
