color page transition

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,7 +29,7 @@ body {
 
 // transition 
 .transition-container { 
-  @apply h-screen z-50 w-full bg-[#EEC643] items-center 
+  @apply h-screen z-50 w-full bg-[#EEF0F2] items-center 
   justify-center text-7xl font-Marc text-[#141414] font-bold flex 
 }
 
