slider and about me

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,7 +17,7 @@
     @apply font-Popp flex flex-col justify-start items-start xl:text-lg text-sm w-full py-1 text-left font-extrabold text-white
   }
   .feature{
-    @apply font-Popp flex justify-start items-start xl:text-lg text-sm w-full py-1 text-left font-extrabold text-white
+    @apply font-Popp  justify-start items-start xl:text-lg text-sm w-full py-1 text-left font-extrabold text-white
   }
 
 
