--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,10 +28,11 @@
   .lib { 
     @apply feature grid  grid-cols-1 sm:grid-cols-2 gap-x-0 md:gap-x-3 gap-y-3 md:gap-y-0 
   }
-  .change-bg { 
-    background:red;
+  .active-nav {
+    @apply menu-item-container text-blue-700 font-bold border-b border-dotted border-blue-500 
+  } 
+  
 
-  }
 
 
 
