--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -17,13 +17,19 @@
     @apply font-Popp flex flex-col justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-white
   }
   .tech2{
-    @apply font-Popp flex flex-col justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-black
+    @apply font-Popp flex flex-col justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-[#1ED760]
+  }
+  .tech3{
+    @apply font-Popp flex flex-col justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-[#006097]
   }
   .feature{
     @apply font-Popp  justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-white
   }
   .feature2{
-    @apply font-Popp  justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-black
+    @apply font-Popp  justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-[#1ED760]
+  }
+  .feature3{
+    @apply font-Popp  justify-start items-start xl:text-2xl md:text-lg text-sm w-full py-1 text-left  text-[#006097]
   }
   .lib { 
     @apply feature grid  grid-cols-1 sm:grid-cols-2 gap-x-0 md:gap-x-3 gap-y-3 md:gap-y-0 
